added content to site

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Ryan Goggin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/extra.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -19,10 +20,11 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Ryan Goggin</a></li>
+							<li><a href="#about-me">About Me</a></li>
+							<li><a href="#one">Skills</a></li>
+							<li><a href="#two">Projects</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -33,107 +35,194 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner intro-container">
+							<img class="linkedin-pic" src="./assets/css/images/LinkedIn Profile Picture.jpg" alt="linkedin profile"/>
+							<div class="intro-info">
+								<h1>Ryan Goggin</h1>
+								<p>Software Engineer</p>
+								<ul class="actions">
+									<li><a href="#about-me" class="button scrolly">About Me</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+
+				<!-- About Me -->
+					<section id="about-me" class="wrapper style-about-me fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>About Me</h1>
+							<p>Hi and thanks for checking out my portfolio site! My name is Ryan Goggin, I'm a software engineer who graduated
+								from App Academy's full-time Software Engineering Program in April 2023, and I'm excited to use the skills I've learned
+								and cultivated to become a full-time SWE in the near future. I have a passion for working with JavaScript (React/Redux)
+								and Python (Flask/SQLAlchemy), but am excited to learn more languages and technologies as I start working. With what I've learned already
+								I've been capable of making 3 full-stack clone projects: GoggInn (an Airbnb clone), PixelPal (a Discord clone), and Goggbook
+								(a Facebook clone). You can find out more about these projects if you scroll down to the Projects section!
+							</p>
+							<p>Aside from coding and software engineering, I also graduated from Brown University in May 2020 with an Sc.B. in Chemical Engineering
+								and worked in pharmaceuticals and biotechnology (AstraZeneca and Lonza) for	two years in the Bay Area prior to switching careers.
+								In my free time I also love to travel, see my friends, hike, ski, go out for brunch, and I'm starting to get back into reading. Definitely
+								reach out to me	if you think I'd be a good fit on your team or even if you just want to chat about my background, cool travel/ski/hiking/brunch spots,
+								or book recs!
+							</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a target="_blank" href="./assets/css/images/Ryan Goggin Resume.pdf" class="button scrolly">Resume</a></li>
+								<li><a href="#one" class="button scrolly">Skills</a></li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
+					<section id="one" class="wrapper style2 fade-up">
+						<div class="inner">
+							<h2>Education</h2>
+							<ul>
+								<li>
+									<span><img class="education-logo" src="./assets/css/images/App Academy Logo.png" alt="app academy"></span>
+									<h3>App Academy: 6-Month Online Software Engineering Program (2023)</h3>
+									<p>Full-time 6-month software engineering bootcamp with 1,000+ hours of coursework focused on full-stack web development using modern frameworks, libraries, and technologies.</p>
+								</li>
+								<li>
+									<span><img class="education-logo" src="./assets/css/images/Brown Logo.png" alt="brown university"></span>
+									<h3>Brown University: Sc.B. in Chemical Engineering (2020)</h3>
+									<p>Rigorous program that extablishes exceptional problem-solving and critical thinking skills from courses such as Chemical Process Design, Chemical Engineering Thermodynamics, and Reaction Kinetics and Reactor Design.</p>
+								</li>
+							</ul>
+							<h2>Skills</h2>
+							<p>I am proficient with the following languages, frameworks, libraries, ORMs, and technologies.</p>
+							<div class="features">
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/javascript-logo.png" alt="javascript">
+									<p>JavaScript</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/react-logo.png" alt="react">
+									<p>React</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/redux-logo.png" alt="redux">
+									<p>Redux</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/python-logo.png" alt="python">
+									<p>Python</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/flask-logo.png" alt="flask">
+									<p>Flask</p>
+								</section>
+								<section>
+									<img class="technology-logo sqlalchemy" src="./assets/css/images/technology-logos/sqla-logo.png" alt="sqlalchemy">
+									<p>SQLAlchemy</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/sequelize-logo.png" alt="sequelize">
+									<p>Sequelize</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/express-logo.png" alt="express">
+									<p>Express.js</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/html-logo.png" alt="html">
+									<p>HTML</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/css-logo.png" alt="css">
+									<p>CSS</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/npm-logo.png" alt="npm">
+									<p>npm</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/nodejs-logo.png" alt="node.js">
+									<p>Node.js</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/git-logo.png" alt="git">
+									<p>Git</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/postgresql-logo.png" alt="postgresql">
+									<p>PostgreSQL</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/amazon-s3-logo.png" alt="aws s3">
+									<p>AWS S3</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/socketio-logo.png" alt="socket.io">
+									<p>Socket.io</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/postman-logo.png" alt="postman">
+									<p>Postman</p>
+								</section>
+								<section>
+									<img class="technology-logo" src="./assets/css/images/technology-logos/render-logo.png" alt="render">
+									<p>Render</p>
+								</section>
 							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
+						</div>
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="two" class="wrapper style3 spotlights">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
+							<h2>Projects</h2>
 						</div>
+						<section>
+							<a href="#" class="image"><img src="./assets/css/images/gogginn-narrow.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>GoggInn</h2>
+									<p>GoggInn is a full-stack clone of Airbnb that can be used to view and review spots, post and manage your own spots, and book visits to other user's spots.</p>
+									<p>Stack: JavaScript, React, Redux, Express.js, Sequelize, HTML/CSS, PostgreSQL, Render</p>
+									<ul class="actions">
+										<li><a target="_blank" href="https://ryangoggin-gogginn.onrender.com/" class="button">Live Site</a></li>
+										<li><a target="_blank" href="https://github.com/ryangoggin/GoggInn" class="button">Github Repo</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="./assets/css/images/pixel-pal-narrow.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>PixelPal</h2>
+									<p>PixelPal is a full-stack clone based off Discord that can be used to create servers with channels to talk to and interact with other users in your communities in real time.</p>
+									<p>Stack: JavaScript, React, Redux, Python, Flask, SQLAlchemy, HTML/CSS, PostgreSQL, Socket.io, Render</p>
+									<ul class="actions">
+										<li><a target="_blank" href="https://pixelpal.onrender.com/" class="button">Live Site</a></li>
+										<li><a target="_blank" href="https://github.com/ryangoggin/PixelPal" class="button">Github Repo</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="./assets/css/images/goggbook-narrow.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Goggbook</h2>
+									<p>Goggbook is a full-stack clone of Facebook that can be used to post your thoughts and images to your friends, like and comment on your friends' posts, view other user's profile pages, and edit your bio and profile picture from your own profile page.</p>
+									<p>Stack: JavaScript, React, Redux, Python, Flask, SQLAlchemy, HTML/CSS, PostgreSQL, AWS S3, Render</p>
+									<ul class="actions">
+										<li><a target="_blank" href="https://goggbook.onrender.com/" class="button">Live Site</a></li>
+										<li><a target="_blank" href="https://github.com/ryangoggin/Goggbook" class="button">Github Repo</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Contact Me</h2>
+							<p>Please reach out if you'd like to discuss my background or any of my projects!</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="https://formspree.io/f/xqkogkna">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -149,34 +238,32 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><input type="submit" value="Send Message" class="button submit"/></li>
 										</ul>
 									</form>
 								</section>
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<h3>Location</h3>
+											<span>Boston, MA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="mailto:ryan_goggin@alumni.brown.edu">ryan_goggin@alumni.brown.edu</a>
+											<div>OR</div>
+											<a href="mailto:ryangoggin1@gmail.com">ryangoggin1@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(603) 809-8103</span>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a target="_blank" href="https://www.linkedin.com/in/ryangoggin20/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a target="_blank" href="https://github.com/ryangoggin" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a target="_blank" href="https://wellfound.com/u/ryan-goggin-1" class="icon brands fa-angellist"><span class="label">Wellfound</span></a></li>
 											</ul>
 										</li>
 									</ul>
