--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<li>
 									<span><img class="education-logo" src="./assets/css/images/Brown Logo.png" alt="brown university"></span>
 									<h3>Brown University: Sc.B. in Chemical Engineering (2020)</h3>
-									<p>Rigorous program that extablishes exceptional problem-solving and critical thinking skills from courses such as Chemical Process Design, Chemical Engineering Thermodynamics, and Reaction Kinetics and Reactor Design.</p>
+									<p>Rigorous program that establishes exceptional problem-solving and critical thinking skills from courses such as Chemical Process Design, Chemical Engineering Thermodynamics, and Reaction Kinetics and Reactor Design.</p>
 								</li>
 							</ul>
 							<h2>Skills</h2>
