switched skills and education sections

--- a/index.html
+++ b/index.html
@@ -74,19 +74,6 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 fade-up">
 						<div class="inner">
-							<h2>Education</h2>
-							<ul>
-								<li>
-									<span><img class="education-logo" src="./assets/css/images/App Academy Logo.png" alt="app academy"></span>
-									<h3>App Academy: 6-Month Online Software Engineering Program (2023)</h3>
-									<p>Full-time 6-month software engineering bootcamp with 1,000+ hours of coursework focused on full-stack web development using modern frameworks, libraries, and technologies.</p>
-								</li>
-								<li>
-									<span><img class="education-logo" src="./assets/css/images/Brown Logo.png" alt="brown university"></span>
-									<h3>Brown University: Sc.B. in Chemical Engineering (2020)</h3>
-									<p>Rigorous program that establishes exceptional problem-solving and critical thinking skills from courses such as Chemical Process Design, Chemical Engineering Thermodynamics, and Reaction Kinetics and Reactor Design.</p>
-								</li>
-							</ul>
 							<h2>Skills</h2>
 							<p>I am proficient with the following languages, frameworks, libraries, ORMs, and technologies.</p>
 							<div class="features">
@@ -163,6 +150,19 @@
 									<p>Render</p>
 								</section>
 							</div>
+							<h2 class="education">Education</h2>
+							<ul>
+								<li>
+									<span><img class="education-logo" src="./assets/css/images/App Academy Logo.png" alt="app academy"></span>
+									<h3>App Academy: 6-Month Online Software Engineering Program (2023)</h3>
+									<p>Full-time 6-month software engineering bootcamp with 1,000+ hours of coursework focused on full-stack web development using modern frameworks, libraries, and technologies.</p>
+								</li>
+								<li>
+									<span><img class="education-logo" src="./assets/css/images/Brown Logo.png" alt="brown university"></span>
+									<h3>Brown University: Sc.B. in Chemical Engineering (2020)</h3>
+									<p>Rigorous program that establishes exceptional problem-solving and critical thinking skills from courses such as Chemical Process Design, Chemical Engineering Thermodynamics, and Reaction Kinetics and Reactor Design.</p>
+								</li>
+							</ul>
 						</div>
 					</section>
 
