updated pixel pal and gogginn images

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							<h2>Projects</h2>
 						</div>
 						<section>
-							<a href="#" class="image"><img src="./assets/css/images/gogginn-narrow.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="./assets/css/images/gogginn-splash-narrow.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>GoggInn</h2>
@@ -186,7 +186,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="./assets/css/images/pixel-pal-narrow.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="./assets/css/images/pixel-pal-splash-narrow.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>PixelPal</h2>
