switch project order, make pictures links to sites

--- a/index.html
+++ b/index.html
@@ -172,21 +172,21 @@
 							<h2>Projects</h2>
 						</div>
 						<section>
-							<a href="#" class="image"><img src="./assets/css/images/gogginn-splash-narrow.png" alt="" data-position="top center" /></a>
+							<a target="_blank" href="https://goggbook.onrender.com/" class="image"><img src="./assets/css/images/goggbook-narrow.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>GoggInn</h2>
-									<p>GoggInn is a full-stack clone of Airbnb that can be used to view and review spots, post and manage your own spots, and book visits to other user's spots.</p>
-									<p>Stack: JavaScript, React, Redux, Express.js, Sequelize, HTML/CSS, PostgreSQL, Render</p>
+									<h2>Goggbook</h2>
+									<p>Goggbook is a full-stack clone of Facebook that can be used to post your thoughts and images to your friends, like and comment on your friends' posts, view other user's profile pages, and edit your bio and profile picture from your own profile page.</p>
+									<p>Stack: JavaScript, React, Redux, Python, Flask, SQLAlchemy, HTML/CSS, PostgreSQL, AWS S3, Render</p>
 									<ul class="actions">
-										<li><a target="_blank" href="https://ryangoggin-gogginn.onrender.com/" class="button">Live Site</a></li>
-										<li><a target="_blank" href="https://github.com/ryangoggin/GoggInn" class="button">Github Repo</a></li>
+										<li><a target="_blank" href="https://goggbook.onrender.com/" class="button">Live Site</a></li>
+										<li><a target="_blank" href="https://github.com/ryangoggin/Goggbook" class="button">Github Repo</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="./assets/css/images/pixel-pal-splash-narrow.png" alt="" data-position="top center" /></a>
+							<a target="_blank" href="https://pixelpal.onrender.com/" class="image"><img src="./assets/css/images/pixel-pal-splash-narrow.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>PixelPal</h2>
@@ -200,15 +200,15 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="./assets/css/images/goggbook-narrow.jpg" alt="" data-position="25% 25%" /></a>
+							<a target="_blank" href="https://ryangoggin-gogginn.onrender.com/" class="image"><img src="./assets/css/images/gogginn-splash-narrow.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Goggbook</h2>
-									<p>Goggbook is a full-stack clone of Facebook that can be used to post your thoughts and images to your friends, like and comment on your friends' posts, view other user's profile pages, and edit your bio and profile picture from your own profile page.</p>
-									<p>Stack: JavaScript, React, Redux, Python, Flask, SQLAlchemy, HTML/CSS, PostgreSQL, AWS S3, Render</p>
+									<h2>GoggInn</h2>
+									<p>GoggInn is a full-stack clone of Airbnb that can be used to view and review spots, post and manage your own spots, and book visits to other user's spots.</p>
+									<p>Stack: JavaScript, React, Redux, Express.js, Sequelize, HTML/CSS, PostgreSQL, Render</p>
 									<ul class="actions">
-										<li><a target="_blank" href="https://goggbook.onrender.com/" class="button">Live Site</a></li>
-										<li><a target="_blank" href="https://github.com/ryangoggin/Goggbook" class="button">Github Repo</a></li>
+										<li><a target="_blank" href="https://ryangoggin-gogginn.onrender.com/" class="button">Live Site</a></li>
+										<li><a target="_blank" href="https://github.com/ryangoggin/GoggInn" class="button">Github Repo</a></li>
 									</ul>
 								</div>
 							</div>
