updated pixel pal url

--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
 							</div>
 						</section>
 						<section>
-							<a target="_blank" href="https://pixelpal.onrender.com/" class="image"><img src="./assets/css/images/pixel-pal-splash-narrow.png" alt="" data-position="top center" /></a>
+							<a target="_blank" href="https://pixel-pal.onrender.com/" class="image"><img src="./assets/css/images/pixel-pal-splash-narrow.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>PixelPal</h2>
 									<p>PixelPal is a full-stack clone based off Discord that can be used to create servers with channels to talk to and interact with other users in your communities in real time.</p>
 									<p>Stack: JavaScript, React, Redux, Python, Flask, SQLAlchemy, HTML/CSS, PostgreSQL, Socket.io, Render</p>
 									<ul class="actions">
-										<li><a target="_blank" href="https://pixelpal.onrender.com/" class="button">Live Site</a></li>
+										<li><a target="_blank" href="https://pixel-pal.onrender.com/" class="button">Live Site</a></li>
 										<li><a target="_blank" href="https://github.com/ryangoggin/PixelPal" class="button">Github Repo</a></li>
 									</ul>
 								</div>
