--- a/index.html
+++ b/index.html
@@ -51,17 +51,16 @@
 					<section id="about-me" class="wrapper style-about-me fullscreen fade-up">
 						<div class="inner">
 							<h1>About Me</h1>
-							<p>Hi and thanks for checking out my portfolio site! My name is Ryan Goggin, I'm a software engineer who graduated
-								from App Academy's full-time Software Engineering Program in April 2023, and I'm excited to use the skills I've learned
-								and cultivated to become a full-time SWE in the near future. I have a passion for working with JavaScript (React/Redux)
-								and Python (Flask/SQLAlchemy), but am excited to learn more languages and technologies as I start working. With what I've learned already
-								I've been capable of making 3 full-stack clone projects: GoggInn (an Airbnb clone), PixelPal (a Discord clone), and Goggbook
-								(a Facebook clone). You can find out more about these projects if you scroll down to the Projects section!
+							<p>Hi and thanks for checking out my portfolio site! My name is Ryan Goggin, I'm currently a software engineer at UKG working 
+								on their Data Platform team. I have a passion for working with TypeScript (React) and Python, but am also using Java currently
+								and am excited to learn more languages and technologies as I continue my career. Additionally I've made projects in my
+								free time which include: GoggInn (an Airbnb clone), PixelPal (a Discord clone), and Goggbook (a Facebook clone).
+								You can find out more about these projects if you scroll down to the Projects section!
 							</p>
 							<p>Aside from coding and software engineering, I also graduated from Brown University in May 2020 with an Sc.B. in Chemical Engineering
 								and worked in pharmaceuticals and biotechnology (AstraZeneca and Lonza) for	two years in the Bay Area prior to switching careers.
 								In my free time I also love to travel, see my friends, hike, ski, go out for brunch, and I'm starting to get back into reading. Definitely
-								reach out to me	if you think I'd be a good fit on your team or even if you just want to chat about my background, cool travel/ski/hiking/brunch spots,
+								reach out to me	if you want to talk software or even if you just want to chat about my background, cool travel/ski/hiking/brunch spots,
 								or book recs!
 							</p>
 							<ul class="actions">
@@ -152,11 +151,6 @@
 							</div>
 							<h2 class="education">Education</h2>
 							<ul>
-								<li>
-									<span><img class="education-logo" src="./assets/css/images/App Academy Logo.png" alt="app academy"></span>
-									<h3>App Academy: 6-Month Online Software Engineering Program (2023)</h3>
-									<p>Full-time 6-month software engineering bootcamp with 1,000+ hours of coursework focused on full-stack web development using modern frameworks, libraries, and technologies.</p>
-								</li>
 								<li>
 									<span><img class="education-logo" src="./assets/css/images/Brown Logo.png" alt="brown university"></span>
 									<h3>Brown University: Sc.B. in Chemical Engineering (2020)</h3>
@@ -294,3 +288,4 @@
 
 	</body>
 </html>
+
